update JSOn description in Python 106

--- a/activities/Python 106 - Dictionaries & APIs.ipynb
+++ b/activities/Python 106 - Dictionaries & APIs.ipynb
@@ -307,6 +307,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Reading JSON into Python\n",
+    "\n",
+    "To convert JSON into a processable object for python, use the JSON module and the `.loads()` function. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Results': 2,\n",
+       " 'books': [{'author': 'Mitchell', 'title': 'Gone with the Wind'},\n",
+       "  {'author': 'Bronte', 'title': 'Wuthering Heights'}],\n",
+       " 'format': None,\n",
+       " 'isPrinted': True}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stringOfJsonData = '{ \"Results\": 2, \"isPrinted\" : true, \"format\" : null, \"books\": [{ \"title\": \"Gone with the Wind\", \"author\":\"Mitchell\" },{ \"title\": \"Wuthering Heights\", \"author\": \"Bronte\" } ]}'\n",
+    "\n",
+    "# uncomment the following line if you haven't yet imported the json module\n",
+    "#import json\n",
+    "\n",
+    "jsonDataAsPythonValue = json.loads(stringOfJsonData)\n",
+    "\n",
+    "jsonDataAsPythonValue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results\n",
+      "isPrinted\n",
+      "format\n",
+      "books\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in jsonDataAsPythonValue:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing JSON from Python\n",
+    "\n",
+    "To write out the data into a JSON file, use the `.dumps()` function. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Results': 2,\n",
+       " 'books': [{'author': 'Mitchell', 'title': 'Gone with the Wind'},\n",
+       "  {'author': 'Bronte', 'title': 'Wuthering Heights'}],\n",
+       " 'format': None,\n",
+       " 'isPrinted': True}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsonDataAsPythonValue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"Results\": 2, \"isPrinted\": true, \"format\": null, \"books\": [{\"title\": \"Gone with the Wind\", \"author\": \"Mitchell\"}, {\"title\": \"Wuthering Heights\", \"author\": \"Bronte\"}]}'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# uncomment next line if you haven't yet imported the json module\n",
+    "#import json\n",
+    "\n",
+    "stringOfJsonData = json.dumps(jsonDataAsPythonValue)\n",
+    "\n",
+    "stringOfJsonData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Making an API call\n",
     "\n",
     "Let's use requests to scrape some data from an API endpoint. In this case, we can use the Library of Congress\n",
@@ -682,6 +801,30 @@
     "for kitten in kittensList:\n",
     "    print(kitten['url'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reflection Activities\n",
+    "\n",
+    "1. What are some of the important features of the dictionary datatype?\n",
+    "1. How do you initiate a dictionary (what is the function)? \n",
+    "  How can you list the keys in a dictionary? How do you list the values in\n",
+    "  a dictionary? \n",
+    "1. In the `json` module, what function(s) do you use to read the JSON data into \n",
+    "  an object that is usable by Python? What function(s) do you use to write the \n",
+    "  data into a JSON file?\n",
+    "1. The `requests` module allows you to interact with web servers using standard\n",
+    "  HTTP protocols. What HTTP request was explored above? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -700,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
