update requests notebook

--- a/activities/Python 106 - Dictionaries & APIs.ipynb
+++ b/activities/Python 106 - Dictionaries & APIs.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,8 +477,11 @@
      "output_type": "stream",
      "text": [
       "You requested: https://www.loc.gov/search/?fo=json&q=kittens&fa=online-format%3Aimage\n",
-      "HTTP server response code: <Response [200]>\n",
-      "HTTP response headers {'Date': 'Thu, 28 Mar 2019 20:14:34 GMT', 'Content-Type': 'application/json', 'Content-Length': '18229', 'Connection': 'keep-alive', 'ETag': '\"9cbb4e9a37cd156702a53d654557724f\"', 'access-control-allow-origin': '*', 'X-Frame-Options': 'allow-from https://unitedstateslibraryofcongress.marketing.adobe.com', 'Expires': 'Fri, 29 Mar 2019 20:10:10 GMT', 'Content-Encoding': 'gzip', 'Accept-Ranges': 'bytes', 'Cache-Control': 'no-transform, max-age=86400', 'Age': '0', 'Expect-CT': 'max-age=604800, report-uri=\"https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct\"', 'Server': 'cloudflare', 'CF-RAY': '4bec456bec1623b4-IAD'}\n"
+      "HTTP server response code: 200\n",
+      "HTTP response headers {'Date': 'Sat, 30 Mar 2019 14:35:39 GMT', 'Content-Type': 'application/json', 'Content-Length': '18161', 'Connection': 'keep-alive', 'ETag': '\"6cccbe01e7f71289a52478f11b81d903\"', 'access-control-allow-origin': '*', 'X-Frame-Options': 'allow-from https://unitedstateslibraryofcongress.marketing.adobe.com', 'Expires': 'Sun, 31 Mar 2019 14:32:14 GMT', 'Content-Encoding': 'gzip', 'Accept-Ranges': 'bytes', 'Cache-Control': 'no-transform, max-age=86400', 'Age': '0', 'Expect-CT': 'max-age=604800, report-uri=\"https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct\"', 'Server': 'cloudflare', 'CF-RAY': '4bfacfb43e3f23ba-IAD'}\n",
+      "\n",
+      "Your request has this content type:\n",
+      " application/json\n"
      ]
     }
    ],
@@ -486,8 +489,20 @@
     "r = requests.get(searchEndpoint, params = parameters)\n",
     "\n",
     "print('You requested:',r.url)\n",
-    "print('HTTP server response code:',r)\n",
-    "print('HTTP response headers',r.headers)"
+    "print('HTTP server response code:',r.status_code)\n",
+    "print('HTTP response headers',r.headers)\n",
+    "\n",
+    "# notice that the headers method returns a dictionary, too? \n",
+    "# We could ask what sort of content it's returning:\n",
+    "\n",
+    "print('\\nYour request has this content type:\\n',r.headers['content-type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the request has returned a json object! Access the response using the `.text` method. "
    ]
   },
   {
@@ -818,13 +833,6 @@
     "1. The `requests` module allows you to interact with web servers using standard\n",
     "  HTTP protocols. What HTTP request was explored above? "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
