--- a/activities/Working with XML and OAIPMH - Digital Maryland.ipynb
+++ b/activities/Working with XML and OAIPMH - Digital Maryland.ipynb
@@ -17,6 +17,7 @@
     "* XPATH reference https://docs.microsoft.com/en-us/previous-versions/dotnet/netframework-4.0/ms256115(v%3dvs.100)\n",
     "* Python requests module https://2.python-requests.org//en/master/user/quickstart/\n",
     "* CONTENTdm [capacities for harvesting via OAIPMH](https://help.oclc.org/Metadata_Services/CONTENTdm/CONTENTdm_Administration/Server_Administration/020Harvesting#OAI_Support)\n",
+    "* XML Chrome Extension [here](https://chrome.google.com/webstore/detail/xml-tree/gbammbheopgpmaagmckhpjbfgdfkpadb?hl=en)\n",
     "\n",
     "We will explore how to gather and enhance information using an example of a collection managed in a CONTENTdm repository. \n",
     "One local example is [Digital Maryland](https://www.digitalmaryland.org/), a statewide digitization program and digital collection managed by the Maryland State Library \n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
       "https://collections.digitalmaryland.org/oai/oai.php?verb=Identify\n",
       "UTF-8\n",
       "---------------------- response text-------------------------\n",
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><OAI-PMH xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responseDate>2019-04-25T11:56:01Z</responseDate><request verb=\"Identify\">http://collections.digitalmaryland.org/oai/oai.php</request><Identify>\n",
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><OAI-PMH xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responseDate>2019-04-25T15:24:02Z</responseDate><request verb=\"Identify\">http://collections.digitalmaryland.org/oai/oai.php</request><Identify>\n",
       "      <repositoryName>CONTENTdm Server Repository</repositoryName>\n",
       "      <baseURL>http://collections.digitalmaryland.org/oai/oai.php</baseURL>\n",
       "      <protocolVersion>2.0</protocolVersion>\n",
@@ -121,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\"?><html><body><oai-pmh xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemalocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responsedate>2019-04-25T11:56:01Z</responsedate><request verb=\"Identify\">http://collections.digitalmaryland.org/oai/oai.php</request><identify>\n",
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?><html><body><oai-pmh xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemalocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responsedate>2019-04-25T15:24:02Z</responsedate><request verb=\"Identify\">http://collections.digitalmaryland.org/oai/oai.php</request><identify>\n",
        "<repositoryname>CONTENTdm Server Repository</repositoryname>\n",
        "<baseurl>http://collections.digitalmaryland.org/oai/oai.php</baseurl>\n",
        "<protocolversion>2.0</protocolversion>\n",
@@ -139,7 +140,7 @@
        "</oai-pmh></body></html>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2388,14 +2389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><OAI-PMH xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responseDate>2019-04-25T12:50:22Z</responseDate><request verb=\"GetRecord\" metadataPrefix=\"oai_dc\" identifier=\"oai:collections.digitalmaryland.org:btpe/482\">http://collections.digitalmaryland.org/oai/oai.php</request><GetRecord><record><header><identifier>oai:collections.digitalmaryland.org:btpe/482</identifier><datestamp>2008-08-07</datestamp><setSpec>btpe</setSpec></header>\n",
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><OAI-PMH xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responseDate>2019-04-25T15:24:28Z</responseDate><request verb=\"GetRecord\" metadataPrefix=\"oai_dc\" identifier=\"oai:collections.digitalmaryland.org:btpe/482\">http://collections.digitalmaryland.org/oai/oai.php</request><GetRecord><record><header><identifier>oai:collections.digitalmaryland.org:btpe/482</identifier><datestamp>2008-08-07</datestamp><setSpec>btpe</setSpec></header>\n",
       "<metadata>\n",
       "<oai_dc:dc xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/oai_dc/ http://www.openarchives.org/OAI/2.0/oai_dc.xsd\">\n",
       "<dc:identifier>btpe2024</dc:identifier>\n",
@@ -2423,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2437,32 +2438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-9418293a1455>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mitem_xml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0metree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromstring\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m38\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mitem_xml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.//{dc}title'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnamespaces\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnamespaces\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mtitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem_xml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.//{dc}title'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "item_xml = etree.fromstring(r.text[38:])\n",
-    "\n",
-    "if item_xml.find('.//{dc}title', namespaces=namespaces).text is not None:\n",
-    "    title = item_xml.find('.//{dc}title').text\n",
-    "    print(title)"
+    "item_xml = etree.fromstring(r.text[38:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2482,27 +2467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot use absolute path on element (<string>)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[0;32m\"C:\\Users\\eupho\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3267\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[0;32m\"<ipython-input-60-e7e7fbb60f74>\"\u001b[0m, line \u001b[0;32m1\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    item_xml.find('/OAI-PMH/GetRecord/record/metadata/oai_dc:dc/dc:identifier')\n",
-      "  File \u001b[0;32m\"src/lxml/etree.pyx\"\u001b[0m, line \u001b[0;32m1527\u001b[0m, in \u001b[0;35mlxml.etree._Element.find\u001b[0m\n",
-      "  File \u001b[0;32m\"src/lxml/_elementpath.py\"\u001b[0m, line \u001b[0;32m311\u001b[0m, in \u001b[0;35mlxml._elementpath.find\u001b[0m\n",
-      "  File \u001b[0;32m\"src/lxml/_elementpath.py\"\u001b[0m, line \u001b[0;32m300\u001b[0m, in \u001b[0;35mlxml._elementpath.iterfind\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"src/lxml/_elementpath.py\"\u001b[1;36m, line \u001b[1;32m269\u001b[1;36m, in \u001b[1;35mlxml._elementpath._build_path_iterator\u001b[1;36m\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<string>\"\u001b[1;36m, line \u001b[1;32munknown\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot use absolute path on element\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baltimore Transit car number 5748, loop at Dundalk Avenue at Center Place, Dundalk (NRSH Baltimore Chapter tour)\n"
      ]
     }
    ],
    "source": [
-    "item_xml.find('/OAI-PMH/GetRecord/record/metadata/oai_dc:dc/dc:identifier')"
+    "for title in item_xml.iter('{*}title'):\n",
+    "    print(title.text)"
    ]
   },
   {
