--- a/activities/Working with XML and OAIPMH - Digital Maryland.ipynb
+++ b/activities/Working with XML and OAIPMH - Digital Maryland.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Resources: \n",
     "\n",
-    "* Alaska Digital Archives https://vilda.alaska.edu/digital/collection/cdmg21\n",
+    "* Digital Maryland https://www.digitalmaryland.org/\n",
     "* OAI-PMH requests http://www.openarchives.org/OAI/2.0/openarchivesprotocol.htm\n",
     "* XPATH reference https://docs.microsoft.com/en-us/previous-versions/dotnet/netframework-4.0/ms256115(v%3dvs.100)\n",
     "* Python requests module https://2.python-requests.org//en/master/user/quickstart/\n",
