--- a/activities/Working with XML and OAIPMH - Digital Maryland.ipynb
+++ b/activities/Working with XML and OAIPMH - Digital Maryland.ipynb
@@ -41,6 +41,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## XML Concepts\n",
+    "\n",
+    "The examples below also presume a basic knowledge of XML. Some of the major techniques for parsing XML and working with XML data in python include:\n",
+    "\n",
+    "* Understanding basic structure of an XML document, including declaration statement, elements, attributes, and schema concept\n",
+    "* Understanding the XML document as \"tree\"-like as well as \"path\"-like\n",
+    "* Concept of schemas and relationship to namespaces referenced in elements (see perhaps http://effbot.org/zone/element-namespaces.htm)\n",
+    "\n",
+    "**Actions**\n",
+    "* Creating a python-processable XML object using ETree and/or lxml modules\n",
+    "* Iterating through the XML object to find various Elements in a list-like structure (use indices)\n",
+    "* Querying for specific attributes using a dictionary-like reference\n",
+    "* Using intial iter & findalls to explore the tree\n",
+    "* Using a dictionary to manage namespaces \n",
+    "* Query for specific tags within namespaces using basic XPath queries\n",
+    "  * requires basic understanding of XPath, similar to the basics of regex that \n",
+    "  are covered in LibCarpentry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First, we'll need to set things up. We need `requests` to use HTTP, \n",
     "we will use a library called [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/) and \n",
     "[lxml](https://lxml.de/tutorial.html) to parse the responses in XML,\n",
@@ -49,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +163,7 @@
        "</oai-pmh></body></html>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2359,12 +2382,15 @@
    "source": [
     "## Get Item Information\n",
     "\n",
-    "Use verb `GetRecord` to retrieve the information about the  title."
+    "Use verb `GetRecord` to retrieve the information about the  title.\n",
+    "\n",
+    "This section also introduces how to handle namespace prefixing with a dictionary\n",
+    "and the use of basic XPath queries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2389,14 +2415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><OAI-PMH xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responseDate>2019-04-25T15:24:28Z</responseDate><request verb=\"GetRecord\" metadataPrefix=\"oai_dc\" identifier=\"oai:collections.digitalmaryland.org:btpe/482\">http://collections.digitalmaryland.org/oai/oai.php</request><GetRecord><record><header><identifier>oai:collections.digitalmaryland.org:btpe/482</identifier><datestamp>2008-08-07</datestamp><setSpec>btpe</setSpec></header>\n",
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><OAI-PMH xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd\"><responseDate>2019-05-05T14:47:44Z</responseDate><request verb=\"GetRecord\" metadataPrefix=\"oai_dc\" identifier=\"oai:collections.digitalmaryland.org:btpe/482\">http://collections.digitalmaryland.org/oai/oai.php</request><GetRecord><record><header><identifier>oai:collections.digitalmaryland.org:btpe/482</identifier><datestamp>2008-08-07</datestamp><setSpec>btpe</setSpec></header>\n",
       "<metadata>\n",
       "<oai_dc:dc xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/oai_dc/ http://www.openarchives.org/OAI/2.0/oai_dc.xsd\">\n",
       "<dc:identifier>btpe2024</dc:identifier>\n",
@@ -2423,26 +2449,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# the item metadata introduces dublin core as a namespace, and we may need to reference that.\n",
-    "# in lxml we can use a dictionary to manage valid namespaces:\n",
-    "namespaces = {\n",
-    "    'OAI-PMH': 'http://www.openarchives.org/OAI/2.0/',\n",
-    "    'dc': 'http://purl.org/dc/elements/1.1/',\n",
-    "}"
+    "To parse the XML, strip out the XML declaration to feed the root element and contents into \n",
+    "a variable that we'll call `item_xml`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "item_xml = etree.fromstring(r.text[38:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the `iter()` function to query basic information using a placeholder namespace (indicated by `{*}` below):"
    ]
   },
   {
@@ -2467,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2485,20 +2512,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baltimore Transit car number 5748, loop at Dundalk Avenue at Center Place, Dundalk (NRSH Baltimore Chapter tour)\n"
+      "Miller, Edward S., 1920-2010;\n"
      ]
     }
    ],
    "source": [
-    "for title in item_xml.iter('{*}title'):\n",
+    "for title in item_xml.iter('{*}creator'):\n",
     "    print(title.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, it is more powerful to use the ETree capabilities to help handle namespaces. For this, a dictionary of the namespaces helps to assign prefixes, then a bit of querying to see how the script sees the tags helps to determine which prefixes to use. Finally, we will use some basic XPath queries to look into specific elements using their tag names rather than (as above) their index positions in the tree. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the item metadata introduces dublin core as a namespace, and we may need to reference that.\n",
+    "# in lxml we can use a dictionary to manage valid namespaces:\n",
+    "ns = {\n",
+    "    'OAI-PMH': 'http://www.openarchives.org/OAI/2.0/',\n",
+    "    'dc': 'http://purl.org/dc/elements/1.1/',\n",
+    "    'oai_dc': 'http://www.openarchives.org/OAI/2.0/oai_dc/',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{http://www.openarchives.org/OAI/2.0/}responseDate {}\n",
+      "{http://www.openarchives.org/OAI/2.0/}request {'verb': 'GetRecord', 'metadataPrefix': 'oai_dc', 'identifier': 'oai:collections.digitalmaryland.org:btpe/482'}\n",
+      "GetRecord\n",
+      "{http://www.openarchives.org/OAI/2.0/}GetRecord {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use for loops like this to reveal the top tags and their namespaces\n",
+    "# Note this also can show possible attributes to query\n",
+    "for item in item_xml:\n",
+    "    print(item.tag, item.attrib)\n",
+    "    try:\n",
+    "        print(item.attrib['verb'])\n",
+    "    except:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oai:collections.digitalmaryland.org:btpe/482\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in item_xml:\n",
+    "    try:\n",
+    "        itemID = item.attrib['identifier']\n",
+    "        print(itemID)\n",
+    "    except:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{http://www.openarchives.org/OAI/2.0/}identifier {}\n",
+      "   oai:collections.digitalmaryland.org:btpe/482\n",
+      "{http://www.openarchives.org/OAI/2.0/}datestamp {}\n",
+      "   2008-08-07\n",
+      "{http://www.openarchives.org/OAI/2.0/}setSpec {}\n",
+      "   btpe\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this loop uses findall() and an XPath query to looks inside the GetRecord element \n",
+    "# to find the item's header information\n",
+    "for element in item_xml.findall('.//OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:header/', namespaces=ns):\n",
+    "    print(element.tag, element.attrib)\n",
+    "    print('  ',element.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{http://purl.org/dc/elements/1.1/}identifier {}\n",
+      "   btpe2024\n",
+      "{http://purl.org/dc/elements/1.1/}title {}\n",
+      "   Baltimore Transit car number 5748, loop at Dundalk Avenue at Center Place, Dundalk (NRSH Baltimore Chapter tour)\n",
+      "{http://purl.org/dc/elements/1.1/}creator {}\n",
+      "   Miller, Edward S., 1920-2010;\n",
+      "{http://purl.org/dc/elements/1.1/}subject {}\n",
+      "   Baltimore (Md.); Baltimore Transit Company; National Railway Historical Society. Baltimore Chapter; Street-railroads; Streets;\n",
+      "{http://purl.org/dc/elements/1.1/}description {}\n",
+      "   Photograph of Baltimore Transit car number 5748 at the loop at Dundalk Avenue at Center Place in Dundalk, Baltimore County, Maryland during a tour set up by the Baltimore Chapter of the NRHS (National Railway Historical Society). Car line 26 runs on these tracks.\n",
+      "{http://purl.org/dc/elements/1.1/}source {}\n",
+      "   Pennsylvania Trolley Museum;\n",
+      "{http://purl.org/dc/elements/1.1/}date {}\n",
+      "   1953-09-20;\n",
+      "{http://purl.org/dc/elements/1.1/}type {}\n",
+      "   Image;\n",
+      "{http://purl.org/dc/elements/1.1/}format {}\n",
+      "   Digital reproduction of 1 color slide, 23 x 34 mm.\n",
+      "{http://purl.org/dc/elements/1.1/}rights {}\n",
+      "   http://rightsstatements.org/vocab/InC/1.0/\n",
+      "{http://purl.org/dc/elements/1.1/}rights {}\n",
+      "   Permission to reproduce or publish this item is required and may be subject to copyright, fees, and other legal restrictions. For more information, please contact the Pennsylvania Trolley Museum, 1 Museum Road, Washington, PA 15301. \n",
+      "{http://purl.org/dc/elements/1.1/}identifier {}\n",
+      "   http://collections.digitalmaryland.org/cdm/ref/collection/btpe/id/482\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this loop looks inside the GetRecord element to find the item's record information\n",
+    "for element in item_xml.findall('.//OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadata/oai_dc:dc/', namespaces=ns):\n",
+    "    print(element.tag, element.attrib)\n",
+    "    print('  ',element.text)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['{http://purl.org/dc/elements/1.1/}identifier', '{http://purl.org/dc/elements/1.1/}title', '{http://purl.org/dc/elements/1.1/}creator', '{http://purl.org/dc/elements/1.1/}subject', '{http://purl.org/dc/elements/1.1/}description', '{http://purl.org/dc/elements/1.1/}source', '{http://purl.org/dc/elements/1.1/}date', '{http://purl.org/dc/elements/1.1/}type', '{http://purl.org/dc/elements/1.1/}format', '{http://purl.org/dc/elements/1.1/}rights', '{http://purl.org/dc/elements/1.1/}rights', '{http://purl.org/dc/elements/1.1/}identifier']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a list of the tags in the metadata element:\n",
+    "\n",
+    "item_tags = list()\n",
+    "\n",
+    "for item in item_xml.findall('.//OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadata/oai_dc:dc/', namespaces=ns):\n",
+    "    item_tags.append(item.tag)\n",
+    "\n",
+    "print(item_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['identifier', 'title', 'creator', 'subject', 'description', 'source', 'date', 'type', 'format', 'rights', 'rights', 'identifier']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if you want to get just the titles without the namespaces and \"qualified names\", \n",
+    "# try to parse the returned element titles as strings, splitting them like this:\n",
+    "\n",
+    "item_tags = list()\n",
+    "\n",
+    "for item in item_xml.findall('.//OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadata/oai_dc:dc/', namespaces=ns):\n",
+    "    if item.tag[0] == '{':\n",
+    "        URI, tag = item.tag[1:].split('}')\n",
+    "        item_tags.append(tag)\n",
+    "    else:\n",
+    "        item_tags.append(item.tag)\n",
+    "\n",
+    "print(item_tags)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming (dangerously) that all of the items will have this set of elements, and in this order,\n",
+    "could we pull information using that list to serve as a list of fields to pull information from each item?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in item_xml.findall('.//OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadata/oai_dc:dc/dc:title/', ns):\n",
+    "    print(type(item))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-90-008765be843b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mitem_tags\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'./OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadta/oai_dc:dc/dc:'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfield\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         \u001b[0minfo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melement\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m         \u001b[0mitem_info\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melement\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "# then, extending the above list, use those elements to create a dictionary of \n",
+    "# the metadata contents:\n",
+    "\n",
+    "item_tags = list()\n",
+    "item_info = dict()\n",
+    "\n",
+    "for item in item_xml.findall('.//OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadata/oai_dc:dc/', namespaces=ns):\n",
+    "    if item.tag[0] == '{':\n",
+    "        URI, tag = item.tag[1:].split('}')\n",
+    "        item_tags.append(tag)\n",
+    "    else:\n",
+    "        tag = item.tag\n",
+    "        item.tags.append(tag)\n",
+    "    for element in item_tags:\n",
+    "        path = './OAI-PMH:GetRecord/OAI-PMH:record/OAI-PMH:metadta/oai_dc:dc/dc:' + field + '/'\n",
+    "        info = item.findall(element, ns).text\n",
+    "        item_info[element] = info\n",
+    "        \n",
+    "print(item_info)"
    ]
   }
  ],
