update validation section

--- a/activities/Preparing Data with BagIt.ipynb
+++ b/activities/Preparing Data with BagIt.ipynb
@@ -7,6 +7,12 @@
    "source": [
     "# Packaging Data (SIP Preparation)\n",
     "\n",
+    "The goal of this notebook is to demonstrate the use of the python `bagit` library, in the context of \n",
+    "preparing data for transfer and readying data for archival storage. This is discussed within the context \n",
+    "of the broader digital curation lifecycle (preparing and storing) and in terms \n",
+    "related to the \"information package\" concept developed in the functional models presented in the \n",
+    "_Reference Model for an Open Archival Information System (OAIS)_, ISO Standard 14721.\n",
+    "\n",
     "## What is packaging?\n",
     "\n",
     "OAIS describes packaging information as\n",
@@ -272,9 +278,31 @@
    "id": "048c7204-bd19-4296-8576-c5d25c0d53d3",
    "metadata": {},
    "source": [
-    "### Validate the Bag\n",
+    "### Validation\n",
     "\n",
-    "Now, we can use the `is_valid()` function to see if the bag object is ready, and if it is indeed an object that we can validate is a well-formed BagIt object:"
+    "One benefit of using this packaging approach is that it is simple, in the sense that \n",
+    "it only exists as files on a disc or server and does not require any specialized software\n",
+    "to see the files or decompress them. In addition, this approach allows you as a digital curator,\n",
+    "librarian, or archivist, to receive, store, and preserve digital assets even when you may not \n",
+    "have all of the information about what these assets are or how they might be used. In the words\n",
+    "of the BagIt spec, the contents of a bag are \"opaque\", that is, it is possible to verify that the \n",
+    "content is accurate whether or not you can display it, render it viewable or processable with software,\n",
+    "or the contents are subject to rights management or proprietary restrictions.\n",
+    "\n",
+    "The specification and structure of a BagIt bag make it possible to check the contents \n",
+    "without \"seeing\" them. This is made possible because we can see if the bag is **complete**,\n",
+    "and we can also check to see if the bag is **valid**. \n",
+    "\n",
+    "* A **complete** bag is one that has all of the required \n",
+    "elements of a bag: a BagIt declaration (`bagit.txt`), a payload (the `data` directory), and a payload manifest\n",
+    "(the list of files and checksums, located in the top-level directory, probably called \n",
+    "something like `manifest-sha256.txt`). \n",
+    "* A **valid** bag is one that is complete and for which it is possible to check each file in the\n",
+    "payload, calculate a checksum for it, and verify that the checksum is the same, indicating that\n",
+    "the contents has not changed. \n",
+    "\n",
+    "To assess the bag that was created above, we can again use the `bagit` library, which has an `is_valid()` function.\n",
+    "This function will check to see if the bag is indeed an object that we can validate is a well-formed BagIt object:"
    ]
   },
   {
@@ -293,20 +321,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df74a286-841f-4af7-aeaf-8a5f0b3821dc",
-   "metadata": {},
-   "source": [
-    "What does this do? Checks to see if the bag contains the required metadata (bag info, fixity) and checks the number of files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "34748d4a-003a-4af1-9085-11cc73f0292b",
    "metadata": {},
    "source": [
     "## Conclusion\n",
     "\n",
-    "Now we have created basic metadata for this group of files, two types of fixity signatures (sha256 and sha512), and an inventory of the files (see `neh-grants-data-202012/manifest-sha256.txt`). This will serve as a basic description of the original files. In the next activities, we will continue to work with this information, but the original files will remain unchanged and available for further consultation or work beyond this project. All of our work will be to extract, transform, and clean the data that we pull from these files, which will be the basis for further computation, visualization, or other analysis."
+    "Now we have created basic fixity and preservation metadata for this group of files, two types of fixity signatures (sha256 and sha512), and an inventory of the files (see `neh-grants-data-202012/manifest-sha256.txt`). This will serve as a basic description of the original files. In the next activities, we will continue to work with this information, but the original files will remain unchanged and available for further consultation or work beyond this project. All of our work will be to extract, transform, and clean the data that we pull from these files, which will be the basis for further computation, visualization, or other analysis."
    ]
   },
   {
